--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>location</title>
     <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=81a4a2e5cc83248f021533735820e8e6"></script>
     <script src="js/location.js" defer></script>
 </head>
 <body>
-    
+    <div id="map"></div>
 </body>
 </html>
+ 
