--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 <body>
     <div id="map"></div>
+
+    <ul class="traffic">
+        <li><a href="#">교통정보 켜기</a> </li>
+        <li class="on"><a href="#">교통정보 끄기</a> </li>
+    </ul>
 </body>
 </html>
  
