--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <li><a href="#">교통정보 켜기</a> </li>
         <li class="on"><a href="#">교통정보 끄기</a> </li>
     </ul>
+
+    <ul class="branch">
+        <li class="on"><a href="#">본점</a></li>
+        <li><a href="#">지점1</a></li>
+        <li><a href="#">지점2</a></li>
+    </ul>
 </body>
 </html>
  
